--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   build:
     commands:
       - echo Building the application...
-      - ./gradlew build -x blog-spring-api-artifact
+      - ./gradlew build -x test
   post_build:
     commands:
       - echo Build completed.
