[CI/CD] AWS 파이프라인 삽질중 3

--- a/appspec.yml
+++ b/appspec.yml
@@ -5,11 +5,11 @@ files:
     destination: /home/ec2-user/deploy
 
 hooks:
-  ApplicationStop:
-    - location: scripts/stop.sh
+  BeforeInstall:
+    - location: scripts/preScript.sh
       timeout: 60
       runas: ec2-user
-  ApplicationStart:
-    - location: scripts/start.sh
+  AfterInstall:
+    - location: scripts/postScript.sh
       timeout: 60
       runas: ec2-user
