--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'software.amazon.awssdk:dynamodb:2.22.0'
     implementation 'software.amazon.awssdk:dynamodb-enhanced:2.22.0'
     implementation 'software.amazon.awssdk:core:2.22.0'
+    implementation 'software.amazon.awssdk:s3:2.31.26'
     compileOnly 'org.projectlombok:lombok'
 //    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
