--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=spring_api
+# warning
+# check the address and port before build gradle
 #server.address=0.0.0.0
 #server.port=8085
 spring.servlet.multipart.max-file-size=100MB
